src/main/webapp/app/shared/input-components/typeahead/typeahead-multiselect/typeahead-multiselect.component.scss
@import '../../../../../content/scss/jbr2_variables.scss';

.typeahead-multiselect {
    width: 100%;

    overflow-y: scroll;
    max-height: 4rem;

    .typeahead-multiselect__tag {
    }

    .typeahead-multiselect__tag-title {
        display: inline-block;
        float: left;

        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        max-width: 200px;
    }

    .typeahead-multiselect__input {
        &:focus {
            border: none;
            box-shadow: none;
            outline: none;
        }
        padding: 0;
        border: 0;
        width: 100%;
    }

    input {
        width: 100%;
    }

}

:host /deep/ ngb-typeahead-window {
    max-width: 485px;

    button.dropdown-item {
        width: 100%;
    }
}

:host {
    width: 100%;
}

